--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
 .App {
-  text-align: center;
+   text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+   height: 40vmin;
+   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+   .App-logo {
+      animation: App-logo-spin infinite 20s linear;
+   }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+   background-color: #282c34;
+   min-height: 100vh;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   font-size: calc(10px + 2vmin);
+   color: white;
 }
 
 .App-link {
-  color: #61dafb;
+   color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+   from {
+      transform: rotate(0deg);
+   }
+   to {
+      transform: rotate(360deg);
+   }
+}
+
+.active {
+   background-color: #4caf50;
+   color: #fff;
+   border-radius: 8px;
+}
+
+.can-interact {
+   cursor: pointer;
+}
+
+.text-white {
+   color: #fff;
+}
+
+.panel {
+   margin: 0;
+   padding: 0px 0px;
+   border: solid #ffc107 2px;
+   border-radius: 8px;
+   overflow: hidden;
+}
+
+.panel-heading {
+   background-color: #ffc107;
+   padding: 4px 16px;
+   color: #fff;
+   margin: 0;
+}
+
+.panel-body {
+   padding: 16px;
+   padding-bottom: 0;
+}
+
+.label-success {
+   background-color: #4caf50;
+   border-radius: 4px;
+   color: #fff;
+   padding: 4px 8px;
+}
+
+.label-secondary {
+   background-color: #6c757d;
+   border-radius: 4px;
+   color: #fff;
+   padding: 4px 8px;
 }
